добавил кнопку выводит сообщение

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   <a href="films.html">Список фильмов</a>
 
 </div>
+<div class="autput">
+    
+</div>
 <button>Нажми меня</button>
+
+<script src="index.js"></script>
 </body>
 </html>
